--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,15 @@
     --ring: 346.8 77.2% 49.8%;
     --radius: 0.5rem;
   }
+  body {
+    height: 100%
+  }
+  html{
+    margin:0;
+    padding:0;
+    max-height:100vh;
+    overflow:hidden;
+  }
 
   .dark {
     --background: 20 14.3% 4.1%;
